bugfix menu footer & add hover menu & bug menu center

--- a/html/a_la_française.html
+++ b/html/a_la_française.html
@@ -33,142 +33,118 @@
     <!-- SECTION MENU -->
     <section>
       <div class="menu_container">
-        <div>
+        <div class="menu_intro">
           <h2 class="menu_title">À la française</h2>
-          <i class="far fa-heart"></i>
+          <div class="heart_flex">
+            <i class="far fa-heart heart_empty-page"></i>
+            <i class="fas fa-heart heart_full-page"></i>
+          </div>
         </div>
         <div class="menu">
           <!-- SECTION STARTER -->
           <h3 class="menu_title-desc">Entrées</h3>
           <div class="menu_starter">
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_a_la_française' id='starter_1'>
-              <label for='starter_1'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Tartare de poulpe acidulé</span>
-                  <span class='plate_text'>Aux zestes d'orange</span>
-                </span>
-                <span class='plate_price'>25€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Tartare de poulpe acidulé</h3>
+                <p class='plate_text'>Aux zestes d'orange</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>25€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_a_la_française' id='starter_2'>
-              <label for='starter_2'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Velouté de légumes d'antan</span>
-                  <span class='plate_text'>Carotte, panais, topinambour</span>
-                </span>
-                <span class='plate_price'>35€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Velouté de légumes d'antan</h3>
+                <p class='plate_text'>Carotte, panais, topinambour</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_a_la_française' id='starter_3'>
-              <label for='starter_3'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Soupe à l'oignon</span>
-                  <span class='plate_text'>Revisitée</span>
-                </span>
-                <span class='plate_price'>20€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Soupe à l'oignon</h3>
+                <p class='plate_text'>Revisitée</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>20€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
           </div>
           <!-- SECTION MAIN COURSE -->
           <h3 class="menu_title-desc">Plats</h3>
           <div class="menu_mainCourse">
             <div class="menu_mainCourse-choice">
-              <input type="checkbox" name='menu_a_la_française' id='mainCourse_1'>
-              <label for='mainCourse_1'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Coquilles Saint-Jacques</span>
-                  <span class='plate_text'>Accompagnées d'une purée de panais</span>
-                </span>
-                <span class='plate_price'>40€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Coquilles Saint-Jacques</h3>
+                <p class='plate_text'>Accompagnées d'une purée de panais</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>40€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_mainCourse-choice">
-              <input type="checkbox" name='menu_a_la_française' id='mainCourse_2'>
-              <label for='mainCourse_2'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Magret de canard</span>
-                  <span class='plate_text'>Et parmentier de pommes de terre</span>
-                </span>
-                <span class='plate_price'>35€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Magret de canard</h3>
+                <p class='plate_text'>Et parmentier de pommes de terre</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_mainCourse-choice">
-              <input type="checkbox" name='menu_a_la_française' id='mainCourse_3'>
-              <label for='mainCourse_3'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Pigeonneau d’Ille-et-Vilaine</span>
-                  <span class='plate_text'>Sur son lit de gnocchis aux légumes</span>
-                </span>
-                <span class='plate_price'>44€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Pigeonneau d’Ille-et-Vilaine</h3>
+                <p class='plate_text'>Sur son lit de gnocchis aux légumes</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>44€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
           </div>
           <!-- SECTION DESSERT -->
           <h3 class="menu_title-desc">Desserts</h3>
           <div class="menu_dessert">
             <div class="menu_dessert-choice">
-              <input type="checkbox" name='menu_a_la_française' id='dessert_1'>
-              <label for='dessert_1'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Pétales de violettes glacés</span>
-                  <span class='plate_text'>Et purée de noisettes</span>
-                </span>
-                <span class='plate_price'>18€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Pétales de violettes glacés</h3>
+                <p class='plate_text'>Et purée de noisettes</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>18€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_dessert-choice">
-              <input type="checkbox" name='menu_a_la_française' id='dessert_2'>
-              <label for='dessert_2'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Fondant au chocolat</span>
-                  <span class='plate_text'>Revisité</span>
-                </span>
-                <span class='plate_price'>22€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Fondant au chocolat</h3>
+                <p class='plate_text'>Revisité</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>22€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_dessert-choice">
-              <input type="checkbox" name='menu_a_la_française' id='dessert_3'>
-              <label for='dessert_3'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Millefeuille croustillant</span>
-                  <span class='plate_text'>Myrtilles et pâte d’amande</span>
-                </span>
-                <span class='plate_price'>23€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Millefeuille croustillant</h3>
+                <p class='plate_text'>Myrtilles et pâte d’amande</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>23€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
           </div>
         </div>
-        <a href="#" class="btn_1">Commander</a>
+        <a href="#" class="btn_3">Commander</a>
       </div>
     </section>
 
