--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -33,155 +33,128 @@
     <!-- SECTION MENU -->
     <section>
       <div class="menu_container">
-        <div>
+        <div class="menu_intro">
           <h2 class="menu_title">La note enchantée</h2>
-          <i class="far fa-heart"></i>
+          <div class="heart_flex">
+            <i class="far fa-heart heart_empty-page"></i>
+            <i class="fas fa-heart heart_full-page"></i>
+          </div>
         </div>
         <div class="menu">
           <!-- SECTION STARTER -->
           <h3 class="menu_title-desc">Entrées</h3>
           <div class="menu_starter">
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='starter_1'>
-              <label for='starter_1'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Ravioles de foie gras </span>
-                  <span class='plate_text'>Accompagnées de leur crème à la truffe</span>
-                </span>
-                <span class='plate_price'>25€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Ravioles de foie gras</h3>
+                <p class='plate_text'>Accompagnées de leur crème à la truffe</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>25€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='starter_2'>
-              <label for='starter_2'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Caviar osciètre</span>
-                  <span class='plate_text'>Sur blini à la farine de blé noir</span>
-                </span>
-                <span class='plate_price'>35€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Caviar osciètre</h3>
+                <p class='plate_text'>Sur blini à la farine de blé noir</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='starter_3'>
-              <label for='starter_3'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Homard et espuma de potiron</span>
-                  <span class='plate_text'>Marinés aux zestes d'orange</span>
-                </span>
-                <span class='plate_price'>20€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Homard et espuma de potiron</h3>
+                <p class='plate_text'>Marinés aux zestes d'orange</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>20€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_starter-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='starter_4'>
-              <label for='starter_4'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Foie gras de canard cuit entier</span>
-                  <span class='plate_text'>Confiture de figue et pain toasté</span>
-                </span>
-                <span class='plate_price'>35€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Foie gras de canard cuit entier</h3>
+                <p class='plate_text'>Confiture de figue et pain toasté</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
           </div>
           <!-- SECTION MAIN COURSE -->
           <h3 class="menu_title-desc">Plats</h3>
           <div class="menu_mainCourse">
             <div class="menu_mainCourse-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_1'>
-              <label for='mainCourse_1'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Noix de coquilles Saint-Jacques</span>
-                  <span class='plate_text'>Sur lit de purée de céleri-rave</span>
-                </span>
-                <span class='plate_price'>40€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Noix de coquilles Saint-Jacques</h3>
+                <p class='plate_text'>Sur lit de purée de céleri-rave</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>40€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_mainCourse-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_2'>
-              <label for='mainCourse_2'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Langoustine poêlée</span>
-                  <span class='plate_text'>Purée de patate douce</span>
-                </span>
-                <span class='plate_price'>35€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Langoustine poêlée</h3>
+                <p class='plate_text'>Purée de patate douce</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_mainCourse-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='mainCourse_3'>
-              <label for='mainCourse_3'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Mijoté de queue de bœuf</span>
-                  <span class='plate_text'>Et riz sauvage aux zestes de citron</span>
-                </span>
-                <span class='plate_price'>44€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Mijoté de queue de bœuf</h3>
+                <p class='plate_text'>Et riz sauvage aux zestes de citron</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>44€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
           </div>
           <!-- SECTION DESSERT -->
           <h3 class="menu_title-desc">Desserts</h3>
           <div class="menu_dessert">
             <div class="menu_dessert-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='dessert_1'>
-              <label for='dessert_1'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Macaron noisette et chocolat</span>
-                  <span class='plate_text'>Glace au caramel brun et sel de Guérande</span>
-                </span>
-                <span class='plate_price'>18€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Macaron noisette et chocolat</h3>
+                <p class='plate_text'>Glace au caramel brun et sel de Guérande</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>18€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_dessert-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='dessert_2'>
-              <label for='dessert_2'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Baba au rhum revisité </span>
-                  <span class='plate_text'>Avec son coulis de citron</span>
-                </span>
-                <span class='plate_price'>22€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Baba au rhum revisité</h3>
+                <p class='plate_text'>Avec son coulis de citron</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>22€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
             <div class="menu_dessert-choice">
-              <input type="checkbox" name='menu_la_note_enchantee' id='dessert_3'>
-              <label for='dessert_3'>
-                <span class='plate_desc'>
-                  <span class="plate_title">Tarte au citron meringuée</span>
-                  <span class='plate_text'>Déstructurée</span>
-                </span>
-                <span class='plate_price'>23€</span>
-                <span class='plate_check'>
-                  <i class="fas fa-check-circle plate_check-ico"></i>
-                </span>
-              </label>
+              <div class='plate_desc'>
+                <h3 class="plate_title">Tarte au citron meringuée </h3>
+                <p class='plate_text'>Déstructurée</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>23€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
             </div>
           </div>
         </div>
-        <a href="#" class="btn_1">Commander</a>
+        <a href="#" class="btn_3">Commander</a>
       </div>
     </section>
 
