--- a/html/la_palette_du_gout.html
+++ b/html/la_palette_du_gout.html
@@ -35,141 +35,116 @@
    <div class="menu_container">
     <div class="menu_intro">
      <h2 class="menu_title">La palette du gout</h2>
-     <i class="far fa-heart heart_empty-page"></i>
-     <i class="fas fa-heart heart_full-page"></i>
+     <div class="heart_flex">
+      <i class="far fa-heart heart_empty-page"></i>
+      <i class="fas fa-heart heart_full-page"></i>
+     </div>
     </div>
     <div class="menu">
      <!-- SECTION STARTER -->
      <h3 class="menu_title-desc">Entrées</h3>
      <div class="menu_starter">
       <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='starter_1'>
-       <label for='starter_1'>
-        <span class='plate_desc'>
-         <span class="plate_title">Fricassée d'escargots</span>
-         <span class='plate_text'>Au piment d'Espelette</span>
-        </span>
-        <span class='plate_price'>25€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Fricassée d'escargots</h3>
+        <p class='plate_text'>Au piment d'Espelette</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>25€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
       <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='starter_2'>
-       <label for='starter_2'>
-        <span class='plate_desc'>
-         <span class="plate_title">Foie gras de canard mi-cuit</span>
-         <span class='plate_text'>Et ses copeaux de truffe noire</span>
-        </span>
-        <span class='plate_price'>35€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Foie gras de canard mi-cuit</h3>
+        <p class='plate_text'>Et ses copeaux de truffe noire</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
       <div class="menu_starter-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='starter_3'>
-       <label for='starter_3'>
-        <span class='plate_desc'>
-         <span class="plate_title">Œuf au plat</span>
-         <span class='plate_text'>Assaisonné à la truffe sur lit de caviar</span>
-        </span>
-        <span class='plate_price'>20€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Œuf au plat</h3>
+        <p class='plate_text'>Assaisonné à la truffe sur lit de caviar</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>20€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
      </div>
      <!-- SECTION MAIN COURSE -->
      <h3 class="menu_title-desc">Plats</h3>
      <div class="menu_mainCourse">
       <div class="menu_mainCourse-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='mainCourse_1'>
-       <label for='mainCourse_1'>
-        <span class='plate_desc'>
-         <span class="plate_title">Filet de bœuf aux herbes</span>
-         <span class='plate_text'>Accompagné de sa ribambelle de légumes</span>
-        </span>
-        <span class='plate_price'>40€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Filet de bœuf aux herbes</h3>
+        <p class='plate_text'>Accompagné de sa ribambelle de légumes</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>40€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
       <div class="menu_mainCourse-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='mainCourse_2'>
-       <label for='mainCourse_2'>
-        <span class='plate_desc'>
-         <span class="plate_title">Parmentier de queue de bœuf</span>
-         <span class='plate_text'>À la truffe noire sur sa purée de panais</span>
-        </span>
-        <span class='plate_price'>35€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Parmentier de queue de bœuf</h3>
+        <p class='plate_text'>À la truffe noire sur sa purée de panais</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
       <div class="menu_mainCourse-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='mainCourse_3'>
-       <label for='mainCourse_3'>
-        <span class='plate_desc'>
-         <span class="plate_title">Filet de turbot</span>
-         <span class='plate_text'>Aux agrumes</span>
-        </span>
-        <span class='plate_price'>44€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Filet de turbot</h3>
+        <p class='plate_text'>Aux agrumes</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>44€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
      </div>
      <!-- SECTION DESSERT -->
      <h3 class="menu_title-desc">Desserts</h3>
      <div class="menu_dessert">
       <div class="menu_dessert-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='dessert_1'>
-       <label for='dessert_1'>
-        <span class='plate_desc'>
-         <span class="plate_title">Paris-Brest</span>
-         <span class='plate_text'>Revisité</span>
-        </span>
-        <span class='plate_price'>18€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Paris-Brest</h3>
+        <p class='plate_text'>Revisité</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>18€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
       <div class="menu_dessert-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='dessert_2'>
-       <label for='dessert_2'>
-        <span class='plate_desc'>
-         <span class="plate_title">Macaron au chocolat d'exception</span>
-         <span class='plate_text'>Et glace à la vanille de Madagascar</span>
-        </span>
-        <span class='plate_price'>22€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Macaron au chocolat d'exception</h3>
+        <p class='plate_text'>Et glace à la vanille de Madagascar</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>22€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
       <div class="menu_dessert-choice">
-       <input type="checkbox" name='menu_de_la_palette_du_gout' id='dessert_3'>
-       <label for='dessert_3'>
-        <span class='plate_desc'>
-         <span class="plate_title">Mousse au chocolat</span>
-         <span class='plate_text'>Au piment d'Espelette et à la truffe noire</span>
-        </span>
-        <span class='plate_price'>23€</span>
-        <span class='plate_check'>
-         <i class="fas fa-check-circle plate_check-ico"></i>
-        </span>
-       </label>
+       <div class='plate_desc'>
+        <h3 class="plate_title">Mousse au chocolat</h3>
+        <p class='plate_text'>Au piment d'Espelette et à la truffe noire</p>
+       </div>
+       <div class='plate_price'><span class='plate_price-text'>23€</span></div>
+       <div class='plate_check'>
+        <i class="fas fa-check-circle plate_check-ico"></i>
+       </div>
       </div>
      </div>
     </div>
-    <a href="#" class="btn_1">Commander</a>
+    <a href="#" class="btn_3 btn_space">Commander</a>
    </div>
   </section>
 
