bugfix ico heart/checkanimation/centermenu/imghome/rognecheck

--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -42,7 +42,7 @@
         </div>
         <div class="menu">
           <!-- SECTION STARTER -->
-          <h3 class="menu_title-desc">Entrées</h3>
+          <h3 class="menu_title-desc">Entrées <span class="border_bot-title"></span></h3>
           <div class="menu_starter">
             <div class="menu_starter-choice">
               <div class='plate_desc'>
@@ -86,7 +86,7 @@
             </div>
           </div>
           <!-- SECTION MAIN COURSE -->
-          <h3 class="menu_title-desc">Plats</h3>
+          <h3 class="menu_title-desc">Plats <span class="border_bot-title"></span></h3>
           <div class="menu_mainCourse">
             <div class="menu_mainCourse-choice">
               <div class='plate_desc'>
@@ -120,7 +120,7 @@
             </div>
           </div>
           <!-- SECTION DESSERT -->
-          <h3 class="menu_title-desc">Desserts</h3>
+          <h3 class="menu_title-desc">Desserts <span class="border_bot-title"></span></h3>
           <div class="menu_dessert">
             <div class="menu_dessert-choice">
               <div class='plate_desc'>
@@ -154,7 +154,9 @@
             </div>
           </div>
         </div>
-        <a href="#" class="btn_3">Commander</a>
+        <div class="btn_center
+        "><a href="#" class="btn_3 ">Commander</a></div>
+      </div>
       </div>
     </section>
 
