--- a/html/la_palette_du_gout.html
+++ b/html/la_palette_du_gout.html
@@ -2,167 +2,168 @@
 <html lang="fr">
 
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/css/style.css">
- <link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
-  rel="stylesheet">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
- <title>OhMyFood Menu de La Palette Du Gout</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <title>OhMyFood Menu de La Palette Du Gout</title>
 </head>
 
 <body>
- <!-- SECTION HEADER -->
- <header class="container">
-  <div class="header_container">
-   <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
-   <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
-  </div>
- </header>
- <main>
-  <!-- SECTION BANNER -->
-  <div>
-   <div class="banner_container">
-    <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="photo d'un plat de la palette du gout"
-     class="banner_img">
-   </div>
-  </div>
-  <!-- SECTION MENU -->
-  <section>
-   <div class="menu_container">
-    <div class="menu_intro">
-     <h2 class="menu_title">La palette du gout</h2>
-     <div class="heart_flex">
-      <i class="far fa-heart heart_empty-page"></i>
-      <i class="fas fa-heart heart_full-page"></i>
-     </div>
+  <!-- SECTION HEADER -->
+  <header class="container">
+    <div class="header_container">
+      <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
+      <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
     </div>
-    <div class="menu">
-     <!-- SECTION STARTER -->
-     <h3 class="menu_title-desc">Entrées</h3>
-     <div class="menu_starter">
-      <div class="menu_starter-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Fricassée d'escargots</h3>
-        <p class='plate_text'>Au piment d'Espelette</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>25€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
+  </header>
+  <main>
+    <!-- SECTION BANNER -->
+    <div>
+      <div class="banner_container">
+        <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          alt="photo d'un plat de la palette du gout" class="banner_img">
       </div>
-      <div class="menu_starter-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Foie gras de canard mi-cuit</h3>
-        <p class='plate_text'>Et ses copeaux de truffe noire</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>35€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_starter-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Œuf au plat</h3>
-        <p class='plate_text'>Assaisonné à la truffe sur lit de caviar</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>20€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-     </div>
-     <!-- SECTION MAIN COURSE -->
-     <h3 class="menu_title-desc">Plats</h3>
-     <div class="menu_mainCourse">
-      <div class="menu_mainCourse-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Filet de bœuf aux herbes</h3>
-        <p class='plate_text'>Accompagné de sa ribambelle de légumes</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>40€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_mainCourse-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Parmentier de queue de bœuf</h3>
-        <p class='plate_text'>À la truffe noire sur sa purée de panais</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>35€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_mainCourse-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Filet de turbot</h3>
-        <p class='plate_text'>Aux agrumes</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>44€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-     </div>
-     <!-- SECTION DESSERT -->
-     <h3 class="menu_title-desc">Desserts</h3>
-     <div class="menu_dessert">
-      <div class="menu_dessert-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Paris-Brest</h3>
-        <p class='plate_text'>Revisité</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>18€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_dessert-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Macaron au chocolat d'exception</h3>
-        <p class='plate_text'>Et glace à la vanille de Madagascar</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>22€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_dessert-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Mousse au chocolat</h3>
-        <p class='plate_text'>Au piment d'Espelette et à la truffe noire</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>23€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-     </div>
     </div>
-    <a href="#" class="btn_3 btn_space">Commander</a>
-   </div>
-  </section>
+    <!-- SECTION MENU -->
+    <section>
+      <div class="menu_container">
+        <div class="menu_intro">
+          <h2 class="menu_title">La palette du gout</h2>
+          <div class="heart_flex">
+            <i class="far fa-heart heart_empty-page"></i>
+            <i class="fas fa-heart heart_full-page"></i>
+          </div>
+        </div>
+        <div class="menu">
+          <!-- SECTION STARTER -->
+          <h3 class="menu_title-desc">Entrées <span class="border_bot-title"></span></h3>
+          <div class="menu_starter">
+            <div class="menu_starter-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Fricassée d'escargots</h3>
+                <p class='plate_text'>Au piment d'Espelette</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>25€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_starter-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Foie gras de canard mi-cuit</h3>
+                <p class='plate_text'>Et ses copeaux de truffe noire</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_starter-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Œuf au plat</h3>
+                <p class='plate_text'>Assaisonné à la truffe sur lit de caviar</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>20€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+          </div>
+          <!-- SECTION MAIN COURSE -->
+          <h3 class="menu_title-desc">Plats <span class="border_bot-title"></span></h3>
+          <div class="menu_mainCourse">
+            <div class="menu_mainCourse-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Filet de bœuf aux herbes</h3>
+                <p class='plate_text'>Accompagné de sa ribambelle de légumes</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>40€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_mainCourse-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Parmentier de queue de bœuf</h3>
+                <p class='plate_text'>À la truffe noire sur sa purée de panais</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_mainCourse-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Filet de turbot</h3>
+                <p class='plate_text'>Aux agrumes</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>44€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+          </div>
+          <!-- SECTION DESSERT -->
+          <h3 class="menu_title-desc">Desserts <span class="border_bot-title"></span></h3>
+          <div class="menu_dessert">
+            <div class="menu_dessert-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Paris-Brest</h3>
+                <p class='plate_text'>Revisité</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>18€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_dessert-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Macaron au chocolat d'exception</h3>
+                <p class='plate_text'>Et glace à la vanille de Madagascar</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>22€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_dessert-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Mousse au chocolat</h3>
+                <p class='plate_text'>Au piment d'Espelette et à la truffe noire</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>23€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn_center
+        "><a href="#" class="btn_3 ">Commander</a></div>
+      </div>
+    </section>
 
- </main>
- <!-- SECTION FOOTER -->
- <footer class="footer">
-  <div class="footer_container container">
-   <ul class="footer_flex">
-    <li>
-     <h5 class="footer_title">ohmyfood</h5>
-    </li>
-    <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
-    <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
-    <li><a href="#" class="footer_link">Mentions légales</a></li>
-    <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
-   </ul>
-  </div>
- </footer>
+  </main>
+  <!-- SECTION FOOTER -->
+  <footer class="footer">
+    <div class="footer_container container">
+      <ul class="footer_flex">
+        <li>
+          <h5 class="footer_title">ohmyfood</h5>
+        </li>
+        <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
+        <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
+        <li><a href="#" class="footer_link">Mentions légales</a></li>
+        <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
+      </ul>
+    </div>
+  </footer>
 
 </body>
 
