add animation fadeup menu

--- a/html/a_la_française.html
+++ b/html/a_la_française.html
@@ -43,7 +43,7 @@
         <div class="menu">
           <!-- SECTION STARTER -->
           <h3 class="menu_title-desc">Entrées<span class="border_bot-title"></span></h3>
-          <div class="menu_starter">
+          <div class="menu_starter fadeUp_1">
             <div class="menu_starter-choice">
               <div class='plate_desc'>
                 <h3 class="plate_title">Tartare de poulpe acidulé</h3>
@@ -77,7 +77,7 @@
           </div>
           <!-- SECTION MAIN COURSE -->
           <h3 class="menu_title-desc">Plats<span class="border_bot-title"></span></h3>
-          <div class="menu_mainCourse">
+          <div class="menu_mainCourse fadeUp_2">
             <div class="menu_mainCourse-choice">
               <div class='plate_desc'>
                 <h3 class="plate_title">Coquilles Saint-Jacques</h3>
@@ -111,7 +111,7 @@
           </div>
           <!-- SECTION DESSERT -->
           <h3 class="menu_title-desc">Desserts <span class="border_bot-title"></span></h3>
-          <div class="menu_dessert">
+          <div class="menu_dessert fadeUp_3">
             <div class="menu_dessert-choice">
               <div class='plate_desc'>
                 <h3 class="plate_title">Pétales de violettes glacés</h3>
