--- a/html/la_note_enchantee.html
+++ b/html/la_note_enchantee.html
@@ -43,7 +43,7 @@
         <div class="menu">
           <!-- SECTION STARTER -->
           <h3 class="menu_title-desc">Entrées <span class="border_bot-title"></span></h3>
-          <div class="menu_starter">
+          <div class="menu_starter fadeUp_1">
             <div class="menu_starter-choice">
               <div class='plate_desc'>
                 <h3 class="plate_title">Ravioles de foie gras</h3>
@@ -87,7 +87,7 @@
           </div>
           <!-- SECTION MAIN COURSE -->
           <h3 class="menu_title-desc">Plats <span class="border_bot-title"></span></h3>
-          <div class="menu_mainCourse">
+          <div class="menu_mainCourse fadeUp_2">
             <div class="menu_mainCourse-choice">
               <div class='plate_desc'>
                 <h3 class="plate_title">Noix de coquilles Saint-Jacques</h3>
@@ -121,7 +121,7 @@
           </div>
           <!-- SECTION DESSERT -->
           <h3 class="menu_title-desc">Desserts <span class="border_bot-title"></span></h3>
-          <div class="menu_dessert">
+          <div class="menu_dessert fadeUp_3">
             <div class="menu_dessert-choice">
               <div class='plate_desc'>
                 <h3 class="plate_title">Macaron noisette et chocolat</h3>
