--- a/html/a_la_française.html
+++ b/html/a_la_française.html
@@ -2,168 +2,168 @@
 <html lang="fr">
 
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/css/style.css">
- <link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
-  rel="stylesheet">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
- <title>OhMyFood Menu A La Francaise</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <title>OhMyFood Menu A La Francaise</title>
 </head>
 
 <body>
- <!-- SECTION HEADER -->
- <header class="container">
-  <div class="header_container">
-   <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
-   <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
-  </div>
- </header>
- <main>
-  <!-- SECTION BANNER -->
-  <div>
-   <div class="banner_container">
-    <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat d'a la francaise"
-     class="banner_img">
-   </div>
-  </div>
-  <!-- SECTION MENU -->
-  <section>
-   <div class="menu_container">
-    <div class="menu_intro">
-     <h2 class="menu_title">À la française</h2>
-     <div class="heart_flex">
-      <i class="far fa-heart heart_empty-page"></i>
-      <i class="fas fa-heart heart_full-page"></i>
-     </div>
+  <!-- SECTION HEADER -->
+  <header class="container">
+    <div class="header_container">
+      <a href="/index.html" class="header_return"><i class="fas fa-arrow-left"></i></a>
+      <h1><img src="Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
     </div>
-    <div class="menu">
-     <!-- SECTION STARTER -->
-     <h3 class="menu_title-desc">Entrées<span class="border_bot-title"></span></h3>
-     <div class="menu_starter fadeUp_1">
-      <div class="menu_starter-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Tartare de poulpe acidulé</h3>
-        <p class='plate_text'>Aux zestes d'orange</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>25€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
+  </header>
+  <main>
+    <!-- SECTION BANNER -->
+    <div>
+      <div class="banner_container">
+        <img src="Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="photo d'un plat d'a la francaise"
+          class="banner_img">
       </div>
-      <div class="menu_starter-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Velouté de légumes d'antan</h3>
-        <p class='plate_text'>Carotte, panais, topinambour</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>35€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_starter-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Soupe à l'oignon</h3>
-        <p class='plate_text'>Revisitée</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>20€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-     </div>
-     <!-- SECTION MAIN COURSE -->
-     <h3 class="menu_title-desc">Plats<span class="border_bot-title"></span></h3>
-     <div class="menu_mainCourse fadeUp_2">
-      <div class="menu_mainCourse-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Coquilles Saint-Jacques</h3>
-        <p class='plate_text'>Accompagnées d'une purée de panais</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>40€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_mainCourse-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Magret de canard</h3>
-        <p class='plate_text'>Et parmentier de pommes de terre</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>35€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_mainCourse-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Pigeonneau d’Ille-et-Vilaine</h3>
-        <p class='plate_text'>Sur son lit de gnocchis aux légumes</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>44€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-     </div>
-     <!-- SECTION DESSERT -->
-     <h3 class="menu_title-desc">Desserts <span class="border_bot-title"></span></h3>
-     <div class="menu_dessert fadeUp_3">
-      <div class="menu_dessert-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Pétales de violettes glacés</h3>
-        <p class='plate_text'>Et purée de noisettes</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>18€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_dessert-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Fondant au chocolat</h3>
-        <p class='plate_text'>Revisité</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>22€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-      <div class="menu_dessert-choice">
-       <div class='plate_desc'>
-        <h3 class="plate_title">Millefeuille croustillant</h3>
-        <p class='plate_text'>Myrtilles et pâte d’amande</p>
-       </div>
-       <div class='plate_price'><span class='plate_price-text'>23€</span></div>
-       <div class='plate_check'>
-        <i class="fas fa-check-circle plate_check-ico"></i>
-       </div>
-      </div>
-     </div>
     </div>
-    <div class="btn_center
+    <!-- SECTION MENU -->
+    <section>
+      <div class="menu_container">
+        <div class="menu_intro">
+          <h2 class="menu_title">À la française</h2>
+          <div class="heart_flex">
+            <i class="far fa-heart heart_empty-page"></i>
+            <i class="fas fa-heart heart_full-page"></i>
+          </div>
+        </div>
+        <div class="menu">
+          <!-- SECTION STARTER -->
+          <h3 class="menu_title-desc">Entrées<span class="border_bot-title"></span></h3>
+          <div class="menu_starter fadeUp_1">
+            <div class="menu_starter-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Tartare de poulpe acidulé</h3>
+                <p class='plate_text'>Aux zestes d'orange</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>25€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_starter-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Velouté de légumes d'antan</h3>
+                <p class='plate_text'>Carotte, panais, topinambour</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_starter-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Soupe à l'oignon</h3>
+                <p class='plate_text'>Revisitée</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>20€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+          </div>
+          <!-- SECTION MAIN COURSE -->
+          <h3 class="menu_title-desc">Plats<span class="border_bot-title"></span></h3>
+          <div class="menu_mainCourse fadeUp_2">
+            <div class="menu_mainCourse-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Coquilles Saint-Jacques</h3>
+                <p class='plate_text'>Accompagnées d'une purée de panais</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>40€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_mainCourse-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Magret de canard</h3>
+                <p class='plate_text'>Et parmentier de pommes de terre</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>35€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_mainCourse-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Pigeonneau d’Ille-et-Vilaine</h3>
+                <p class='plate_text'>Sur son lit de gnocchis aux légumes</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>44€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+          </div>
+          <!-- SECTION DESSERT -->
+          <h3 class="menu_title-desc">Desserts <span class="border_bot-title"></span></h3>
+          <div class="menu_dessert fadeUp_3">
+            <div class="menu_dessert-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Pétales de violettes glacés</h3>
+                <p class='plate_text'>Et purée de noisettes</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>18€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_dessert-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Fondant au chocolat</h3>
+                <p class='plate_text'>Revisité</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>22€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+            <div class="menu_dessert-choice">
+              <div class='plate_desc'>
+                <h3 class="plate_title">Millefeuille croustillant</h3>
+                <p class='plate_text'>Myrtilles et pâte d’amande</p>
+              </div>
+              <div class='plate_price'><span class='plate_price-text'>23€</span></div>
+              <div class='plate_check'>
+                <i class="fas fa-check-circle plate_check-ico"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="btn_center
         "><a href="#" class="btn_3 ">Commander</a></div>
-   </div>
-  </section>
+      </div>
+    </section>
 
- </main>
- <!-- SECTION FOOTER -->
- <footer class="footer">
-  <div class="footer_container container">
-   <ul class="footer_flex">
-    <li>
-     <h5 class="footer_title">ohmyfood</h5>
-    </li>
-    <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
-    <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
-    <li><a href="#" class="footer_link">Mentions légales</a></li>
-    <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
-   </ul>
-  </div>
- </footer>
+  </main>
+  <!-- SECTION FOOTER -->
+  <footer class="footer">
+    <div class="footer_container container">
+      <ul class="footer_flex">
+        <li>
+          <h5 class="footer_title">ohmyfood</h5>
+        </li>
+        <li><i class="fas fa-utensils footer_ico"></i><a href="#" class="footer_link">Proposer un restaurant</a></li>
+        <li><i class="fas fa-hands-helping footer_ico"></i><a href="#" class="footer_link">Devenir partenaire</a></li>
+        <li><a href="#" class="footer_link">Mentions légales</a></li>
+        <li><a href="mailto:email@example.com" class="footer_link">Contact</a></li>
+      </ul>
+    </div>
+  </footer>
 
 </body>
 
