--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="css/style.css">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap"
@@ -27,7 +27,7 @@
  <!-- SECTION HEADER -->
  <header>
   <div class="header_container">
-   <h1><img src="/Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
+   <h1><img src="Images/logo/ohmyfood.png" alt="logo" class="header_logo"></h1>
   </div>
  </header>
  <main>
@@ -79,7 +79,7 @@
      <article class="restaurant_card">
       <a href="html/la_palette_du_gout.html">
        <span class="restaurant_new">Nouveau</span>
-       <img src="/Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant_card-img"
+       <img src="Images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="restaurant_card-img"
         alt="photo d'un plat de la palette du gout">
        <h4 class="card_title">La palette du goût</h4>
        <p class="card_txt">Ménilmontant</p>
@@ -90,7 +90,7 @@
      <article class="restaurant_card">
       <a href="html/la_note_enchantee.html">
        <span class="restaurant_new">Nouveau</span>
-       <img src="/Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg " class="restaurant_card-img"
+       <img src="Images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg " class="restaurant_card-img"
         alt="photo d'un plat de la note enchantée">
        <h4 class="card_title">La note enchantée</h4>
        <p class="card_txt">Charonne</p>
@@ -100,7 +100,7 @@
      </article>
      <article class="restaurant_card">
       <a href="html/a_la_française.html">
-       <img src="/Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant_card-img"
+       <img src="Images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="restaurant_card-img"
         alt="photo d'un plat d'a la francaise">
        <h4 class="card_title">À la française</h4>
        <p class="card_txt">Cité Rouge
@@ -111,7 +111,7 @@
      </article>
      <article class="restaurant_card">
       <a href="html/le_delice_des_sens.html">
-       <img src="/Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant_card-img"
+       <img src="Images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" class="restaurant_card-img"
         alt="photo d'un plat du delice des gouts">
        <h4 class="card_title">Le délice des sens</h4>
        <p class="card_txt">Folie-Méricourt</p>
